# kamatsuka

./: .gitignore  .gitmodules  ADMIN_MODE_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  Cargo.toml  DROPBOX_API_ENHANCEMENT.md  LICENSE  PATH_ROOT_HEADER_IMPLEMENTATION.md  README.md  add_path_root_header.py  dropbox-api-individual.yaml  dropbox-api-styles.md  dropbox-api-team.yaml  stone.pest
DropboxAPI/: validateDropboxAPI-solution-0.md
docs/: CLAUDE.md  PATH_ROOT_SCHEMA_IMPLEMENTATION.md
examples/: use_cases.als
models/: API.als  DropboxAPI.als  File.als  Sharing.als  User.als  Util.als  Validator.als  dropbox-api-with-limits.als  dropbox-api.als  dropbox-subset.als
models/DropboxAPI/: receipt.json
models_report/dropbox-subset/: SharedFoldersHaveMembers-solution-0.md  receipt.json  show-solution-0.md
openapi/: common-test.yaml  dropbox-api-complete.yaml  dropbox-api-individual.yaml  dropbox-api-team.yaml  users.yaml
src/: main.rs  stone.pest
src/converter/: mod.rs
src/modeller/: limits.rs  mod.rs
src/verifier/: mod.rs
test/: debug.stone  simple.stone
