[package]
name = "kamatsuka"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.8"
pest_derive = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "3.0"
indexmap = { version = "2.2", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"